--- a/src/app/components/components.css
+++ b/src/app/components/components.css
@@ -4,10 +4,124 @@
     height: 7rem;
     display: flex;
     z-index: 4;
-    position: relative;
+    /* position: relative; */
+}
+
+.product-title span {
+    transition: .4s;
+
+}
+
+.product-title span:hover {
+    color: #174AC0;
+
 }
 
 
+.shape {
+    color: white;
+    border-top-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    transform: skew(-20deg);
+    transition: .3s;
+}
+
+
+
+.buttons-container svg {
+    height: 3rem;
+    width: 3rem;
+    fill: #174AC0;
+    cursor: pointer;
+
+}
+
+
+
+
+
+.product-image {
+    height: 65%;
+    border-radius: 0.5rem;
+    height: 15rem;
+
+}
+
+.button button {
+    transition: 1s;
+
+    font-weight: 500;
+    border: 0.15rem solid rgb(52, 50, 160);
+}
+
+.slide:hover {
+    color: white;
+    border-color: black;
+    box-shadow: inset 7em 0 0 0 rgb(52, 50, 160);
+}
+
+
+
+
+.product-image img {
+    height: auto;
+    width: 60%;
+    object-fit: contain;
+}
+
+.buttons-container {
+    position: relative;
+    top: 12rem;
+
+    /* background-color: green; */
+    display: flex;
+    left: 1rem;
+    /* height: 24rem; */
+
+    /* width: 80rem; */
+    align-items: center;
+    justify-content: space-between;
+}
+
+.buttons-container svg {
+    opacity: 0.5;
+}
+
+.buttons-container svg:hover {
+    opacity: 1;
+}
+
+.catalog-container {
+    display: flex;
+    align-items: center;
+    scroll-behavior: smooth;
+    /* border: 1px solid red; */
+    cursor: pointer;
+    width: auto;
+    overflow: hidden;
+
+}
+
+* {
+    user-select: none;
+}
+
+.card {
+    cursor: default;
+    width: 20rem;
+    /* display: flex; */
+    /* flex-direction: column; */
+    height: 100%;
+}
+
+
+.under {
+    border-bottom: 0.25rem solid gray;
+}
+
+.miniheader {
+    border-bottom: 0.1rem solid black;
+}
 
 .mobileheader,
 .activephone {
@@ -16,7 +130,6 @@
 
 .search-bar input {
     user-select: none;
-
     height: 90%;
     outline: none;
     width: 100%;
@@ -43,6 +156,7 @@
 .phone-search {
     display: none;
 }
+
 
 .icon {
     background-color: #FFC120;
@@ -72,8 +186,15 @@
         z-index: -1;
         background-color: #174AC0;
         transition: .3s;
-        margin-top: -45%;
+        margin-left: -100%;
         padding: 1rem 0rem;
+        position: absolute;
+
+    }
+
+    .buttons-container svg {
+        transform: scale(2);
+        cursor: pointer;
 
     }
 
@@ -100,7 +221,7 @@
 
 
     body {
-        overflow-x: hidden;
+        /* overflow-x: hidden; */
 
     }
 
@@ -134,7 +255,7 @@
         background-color: #174AC0;
         transition: .3s;
         padding: 1rem 0rem;
-        margin-top: 0%;
+        margin-left: 0%;
 
         opacity: 1;
 
