--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,20 @@
 @tailwind utilities;
 
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {}
+
+.content {
+    padding: 1rem;
+    max-width: 80rem;
+    margin: auto;
+}
+
+@media screen and (max-width:1000px) {
+    .content {
+
+        width: 90%;
+    }
 }
