--- a/src/app/components/components.css
+++ b/src/app/components/components.css
@@ -17,6 +17,13 @@
 
 }
 
+.Top {
+    font-size: 2rem;
+}
+
+.Items {
+    font-size: 1.25rem;
+}
 
 .shape {
     color: white;
@@ -90,6 +97,15 @@
 .buttons-container svg {
     opacity: 0.5;
 }
+
+.brands {
+    border: .12rem solid;
+    border-color: rgba(0, 0, 0, 0.2);
+    padding: .5rem 2rem;
+    border-radius: .8rem;
+}
+
+
 
 .buttons-container svg:hover {
     opacity: 1;
@@ -285,6 +301,32 @@
 
     .text {
         margin-left: 1.75rem;
+    }
+
+    .catalog-container {
+        overflow-x: auto;
+    }
+
+    .card {
+        cursor: default;
+        width: 18rem;
+        /* display: flex; */
+        /* flex-direction: column; */
+        height: 100%;
+    }
+
+    .product-image {
+        border-radius: 0.5rem;
+        height: 12.5rem;
+
+    }
+
+    .Top {
+        font-size: 1.25rem;
+    }
+
+    .Items {
+        font-size: .85rem;
     }
 
 
