--- a/src/app/components/components.css
+++ b/src/app/components/components.css
@@ -139,6 +139,31 @@
     border-bottom: 0.25rem solid gray;
 }
 
+.imageC {
+    object-fit: cover;
+    width: 10rem;
+    height: 10rem;
+    background-color: gainsboro;
+    border-radius: 50%;
+
+
+}
+
+.imageC img {
+    width: auto;
+    height: 100%;
+    margin: auto;
+    transform: scale(0.8);
+    object-fit: contain;
+
+}
+
+.hoverColor:hover {
+    color: #3065e2;
+    font-weight: 700;
+    transition: .4s;
+}
+
 .miniheader {
     border-bottom: 0.1rem solid black;
 }
@@ -199,6 +224,9 @@
 
 
 @media screen and (max-width:1000px) {
+    .buttons-container {
+        display: none;
+    }
 
     .phone-search {
         display: block;
@@ -324,20 +352,14 @@
         margin-top: 1rem;
         padding-bottom: 2rem;
         grid-template-columns: repeat(2, 1fr);
-        display: grid;
+        display: flex;
+        overflow-x: auto;
     }
 
     .card {
-        /* background-color: red; */
-
         cursor: default;
-        width: 40vw;
-        margin: auto;
-        margin-bottom: 2rem;
-
-
-        /* display: flex; */
-        /* flex-direction: column; */
+        width: 45vw;
+        margin: 2rem 1rem;
         height: 100%;
     }
 
