--- a/src/app/components/components.css
+++ b/src/app/components/components.css
@@ -9,13 +9,16 @@
 
 .footer-content {
     max-width: 75rem;
-    background-color: red;
     margin: auto;
 }
 
 .product-title span {
     transition: .4s;
 
+}
+
+footer {
+    background-color: rgb(36, 38, 63);
 }
 
 .sticky {
