trying new moethod for loading better ux

--- a/src/app/components/components.css
+++ b/src/app/components/components.css
@@ -136,7 +136,7 @@ footer {
     align-items: center;
     scroll-behavior: smooth;
     /* border: 1px solid red; */
-    cursor: pointer;
+    /* cursor: pointer; */
     width: auto;
     overflow: hidden;
 
