--- a/src/app/components/loading.css
+++ b/src/app/components/loading.css
@@ -1,7 +1,8 @@
 .fixthis {
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     top: 0px;
     left: 0;
