--- a/src/app/components/loading.css
+++ b/src/app/components/loading.css
@@ -47,3 +47,48 @@
         transform: rotate(360deg)
     }
 }
+
+@media screen and (max-width:1000px) {
+    .fixthis {
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        background-color: rgba(0, 0, 0, 0.2);
+        display: flex;
+        top: 0px;
+        left: 0;
+        justify-CONTENT: center;
+        align-items: center;
+    }
+
+    .minh100 {
+        min-height: 70vh;
+    }
+
+    .loader {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        display: inline-block;
+        position: relative;
+        background: linear-gradient(0deg, rgba(155, 41, 0, 0.2) 33%, #005eff 50%);
+        background-color: blue;
+        box-sizing: border-box;
+        animation: rotation 1s linear infinite;
+    }
+
+    .loader::after {
+
+        content: '';
+        box-sizing: border-box;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background: #263238;
+
+    }
+}
