--- a/src/app/search/loading.css
+++ b/src/app/search/loading.css
@@ -1,12 +1,14 @@
 .fixthis {
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     top: 0px;
     left: 0;
     justify-CONTENT: center;
     align-items: center;
+    z-index: 9999;
 }
 
 .minh100 {
@@ -14,35 +16,23 @@
 }
 
 .loader {
-    width: 4vw;
-    height: 4vw;
-    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    background: #FFF;
     display: inline-block;
-    position: relative;
-    background: linear-gradient(0deg, rgba(255, 61, 0, 0.2) 33%, #005eff 100%);
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-}
-
-.loader::after {
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 44px;
-    height: 44px;
     border-radius: 50%;
-    background: #263238;
+    box-sizing: border-box;
+    animation: animloader 1s ease-in infinite;
 }
 
-@keyframes rotation {
+@keyframes animloader {
     0% {
-        transform: rotate(0deg)
+        transform: scale(0);
+        opacity: 1;
     }
 
     100% {
-        transform: rotate(360deg)
+        transform: scale(1);
+        opacity: 0;
     }
 }
