order title fixed / mobile footer fixed

--- a/src/app/components/components.css
+++ b/src/app/components/components.css
@@ -284,6 +284,11 @@ ul li a:hover::after {
 
 
 @media screen and (max-width:1000px) {
+    ul li a:hover::after {
+        width: 16%;
+        transition: .4s;
+    }
+
     .buttons-container {
         display: none;
     }
